Test: PerformanceService 공연 조회 기능 단위 테스트 작성